--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,10 +12,8 @@ find_package(docopt COMPONENTS CXX REQUIRED)  # docopt_DIR: /usr/local/lib/cmake
 # find_package(Seastar REQUIRED)  # Seastar_DIR: /usr/local/lib/cmake/Seastar
 
 # GRPC and Protocol Buffers libraries location and finding
-# set(PROTO_INSTALL_DIR "$ENV{HOME}/Git/protobuf/cmake/install")
-# set(GRPC_INSTALL_DIR "$ENV{HOME}/Git/grpc/build/install")
-set(PROTO_INSTALL_DIR "$ENV{HOME}/Git/snoopy/third_party/protobuf/cmake/install")  # TODO
-set(GRPC_INSTALL_DIR "$ENV{HOME}/Git/snoopy/third_party/grpc/build/install")  # TODO
+set(PROTO_INSTALL_DIR "/home/ksolive/code/boomerang/third_party/protobuf/cmake/install")  # grpc_path
+set(GRPC_INSTALL_DIR "/home/ksolive/code/boomerang/third_party/grpc/build/install") # grpc_path
 list(APPEND CMAKE_PREFIX_PATH ${PROTO_INSTALL_DIR} ${GRPC_INSTALL_DIR})
 find_package(Protobuf REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
